# vita-porta

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_EXPLORER.md  README.md  _llm_check.py  list_cameras.py  pyproject.toml
.claude/: settings.json
.decisions/: decisions.jsonl
backend_api/app/: event_bus.py  main.py
benchmarking/: __init__.py  datasets.py  evaluator.py  manifest.example.json  manifest.py  models.py  runner.py  store.py
benchmarking/tests/: __init__.py  test_evaluator.py
docs/: PROGRESS.md  gelisme_ilerlemesi.md  pitch.md  teknik_rapor.md
edge_firmware/amg8833_test/: amg8833_test.ino
edge_firmware/vita_porta_cam/: PROGRESS.md  vita_porta_cam.ino
edge_firmware/vita_porta_rtos/: vita_porta_rtos.ino
extensions/vita-porta-docs/: manifest.json  package.json  tsconfig.json  vite.config.ts
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentPanel.tsx  AnatomicalRadial.tsx  BenchmarkPanel.tsx  DemoControls.tsx  Header.tsx  HistoryDetailModal.tsx  HistoryList.tsx  LoginScreen.tsx  NurseVerdict.tsx  PirStatusBanner.tsx  PostureSilhouette.tsx  ResetConfirmDialog.tsx  SessionGate.tsx  ShiftHistoryPopover.tsx  Tooltip.tsx  TriageCard.tsx  useTriageStream.ts
frontend/lib/: agentReasons.ts  api.ts  session.ts  signalLabels.ts  types.ts
gateway_agents/: __init__.py  runner.py
infrastructure/: monitor.py  pi_setup.sh
orchestration/: __init__.py  config.py  decisions_store.py  demo.py  feedback_store.py  llm.py  schemas.py  sessions_store.py  supervisor.py
(+30 files in other folders)
