[project]
name = "vita-porta"
version = "0.1.0"
description = "AI emergency triage assistant — multi-agent visual analysis for ER nurses"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "Yusuf Şahin" },
    { name = "Mert Mirzaoğlu" },
    { name = "Mert Korkmaz" },
]

dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "structlog>=24.1",

    # Orchestration
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "anthropic>=0.39",
    "openai>=1.40",

    # RAG
    "chromadb>=0.5",
    "sentence-transformers>=3.0",

    # Vision
    "opencv-python>=4.10",
    "mediapipe>=0.10.14,<0.10.20",  # Solutions API son taşıyan sürümler; 0.10.20+ Windows'ta sadece Tasks API var
    "numpy>=1.26",

    # IO
    "paho-mqtt>=2.1",

    # Backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestration*", "gateway_agents*", "backend_api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["orchestration/tests", "gateway_agents/tests", "backend_api/tests"]
